--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,101 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="/dist/output.css" rel="stylesheet">
-</head>
-<body>
-  <h1 class="text-3xl font-bold underline">
-    Hello world!
-  </h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="/dist/output.css" rel="stylesheet" />
+
+    <!-- Font awesome link -->
+    <script
+      src="https://kit.fontawesome.com/92261a1a0e.js"
+      crossorigin="anonymous"></script>
+  </head>
+  <body class="">
+    <!-- Header section start -->
+    <header class="max-width py-[6px]">
+      <nav class="">
+        <div class="flex flex-wrap items-center justify-between">
+          <a href="/" class="flex items-center">
+            <img
+              src="./assets/images/logo.png"
+              class="h-10"
+              alt="Flowbite Logo" />
+          </a>
+          <div class="flex lg:order-2 items-center">
+            <button
+              type="button"
+              class="px-2 py-[5px] rounded bg-pC text-black hover:bg-white hover:scale-105 duration-300 lg:font-bold font-semibold lg:text-base text-xs ease-in-out">
+              GET 24H TRIAL
+              <i class="fa-solid fa-cart-plus text-black bg-transparent"></i>
+            </button>
+            <button
+              data-collapse-toggle="navbar-cta"
+              type="button"
+              class="inline-flex items-center ml-3 text-sm text-gray-500 rounded-lg lg:hidden"
+              aria-controls="navbar-cta"
+              aria-expanded="false">
+              <span class="sr-only">Open main menu</span>
+              <svg
+                class="w-6 h-6"
+                aria-hidden="true"
+                fill="currentColor"
+                viewBox="0 0 20 20"
+                xmlns="http://www.w3.org/2000/svg">
+                <path
+                  fill-rule="evenodd"
+                  d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
+                  clip-rule="evenodd"></path>
+              </svg>
+            </button>
+          </div>
+          <div
+            class="items-center justify-between hidden w-full lg:flex lg:w-auto lg:order-1"
+            id="navbar-cta">
+            <ul
+              class="flex flex-col justify-center font-medium p-4 lg:p-0 mt-4 border border-gray-100 rounded bg-pC lg:bg-transparent lg:flex-row lg:space-x-8 lg:mt-0 lg:border-0">
+              <li class="bg-transparent">
+                <a
+                  href="#"
+                  class="block py-2 pl-3 pr-4 lg:text-white hover:text-pC uppercase text-black rounded text-center lg:p-0 bg-transparent"
+                  aria-current="page"
+                  >Home</a
+                >
+              </li>
+              <li class="bg-transparent">
+                <a
+                  href="#"
+                  class="block py-2 pl-3 pr-4 lg:text-white hover:text-pC uppercase text-black rounded text-center lg:p-0 bg-transparent">
+                  INSTALLATION TUTORIAL</a
+                >
+              </li>
+              <li class="bg-transparent">
+                <a
+                  href="#"
+                  class="block py-2 pl-3 pr-4 lg:text-white hover:text-pC uppercase text-black rounded text-center lg:p-0 bg-transparent"
+                  >Pricing</a
+                >
+              </li>
+              <li class="bg-transparent">
+                <a
+                  href="#"
+                  class="block py-2 pl-3 pr-4 lg:text-white hover:text-pC uppercase text-black rounded text-center lg:p-0 bg-transparent"
+                  >Contact US</a
+                >
+              </li>
+              <li class="bg-transparent">
+                <a
+                  href="#"
+                  class="block py-2 pl-3 pr-4 lg:text-white hover:text-pC uppercase text-black rounded text-center lg:p-0 bg-transparent"
+                  >FAQ</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <!-- Header section End -->
+  </body>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.6/flowbite.min.js"></script>
 </html>
