--- a/src/index.html
+++ b/src/index.html
@@ -366,6 +366,7 @@
           </div>
         </div>
       </section>
+      <!-- Movies card slider section end -->
 
       <!-- Start Popular -->
       <div>
@@ -648,12 +649,77 @@
       <!-- FAQ section -->
       <section class="mb-32">
         <div class="p-3 bgGradient">
-          <h3 class="text-3xl font-bold text-center">
+          <h5
+            class="text-white text-[42px] font-bold text-center mb-2 afterBefore relative">
             Frequently Asked Questions (FAQ)
-          </h3>
+          </h5>
         </div>
 
-        <div class=""></div>
+        <div class="grid grid-cols-2 gap-5 max-w-5xl mx-auto">
+          <!-- faq -->
+          <div class="">
+            <div
+              class="duration-300 ease-linear"
+              id="accordion-collapse"
+              data-accordion="collapse">
+              <!-- colaps- -->
+              <h2 id="accordion-collapse-heading-1">
+                <button
+                  type="button"
+                  class="flex items-center justify-between w-full p-4 mb-2 font-medium text-left border border-[#FDF7FB33] duration-300 ease-linear"
+                  data-accordion-target="#accordion-collapse-body-1"
+                  aria-controls="accordion-collapse-body-1">
+                  <span>What is Flowbite?</span>
+                  <svg
+                    data-accordion-icon
+                    class="w-6 h-6 rotate-180 shrink-0"
+                    fill="currentColor"
+                    viewBox="0 0 20 20"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path
+                      fill-rule="evenodd"
+                      d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
+                      clip-rule="evenodd"></path>
+                  </svg>
+                </button>
+              </h2>
+              <div
+                id="accordion-collapse-body-1"
+                class="hidden duration-300 ease-linear"
+                aria-labelledby="accordion-collapse-heading-1">
+                <div class="p-5 pt-2">
+                  <p class="mb-2 text-gray-500 dark:text-gray-400">
+                    Flowbite is an open-source library of interactive components
+                    built on top of Tailwind CSS including buttons, dropdowns,
+                    modals, navbars, and more.
+                  </p>
+                </div>
+              </div>
+
+
+            
+            </div>
+          </div>
+
+          <!-- contact section -->
+          <div class="border border-[#FDF7FB33] p-[10px]">
+            <div class="text-center">
+              <i class="fa-brands fa-whatsapp text-7xl my-5"></i>
+              <h5 class="font-bold text-4xl mb-5">Online Support</h5>
+              <button
+                class="text-xl px-3 py-2 text-black font-semibold hover:bg-white zoom-in-zoom-out bg-sC rounded-full border duration-300 mb-5">
+                <i class="fa-solid fa-comment-dots mr-1 text-black"></i>
+                WhatsApp us
+              </button>
+              <p class="text-xl tracking-widest mb-5">
+                You still have a question?
+              </p>
+              <p class="text-xl tracking-widest mb-5">
+                Email us : contact@serviceiptv.com
+              </p>
+            </div>
+          </div>
+        </div>
       </section>
 
       <!-- Review Start -->
@@ -734,13 +800,12 @@
         </div>
       </div>
       <!-- Review End -->
-
-      <!-- Movies card slider section end -->
     </main>
     <!-- Main section End -->
 
     <!-- Footer start -->
-    <footer class="footerGradient flex justify-around items-center text-white">
+    <footer
+      class="footerGradient flex justify-around items-center text-white py-5">
       <p>Refund and Returns Policy</p>
       <p>Privacy Policy</p>
       <p>Terms Of Service</p>
