--- a/src/index.html
+++ b/src/index.html
@@ -658,21 +658,19 @@
         <div class="grid grid-cols-2 gap-5 max-w-5xl mx-auto">
           <!-- faq -->
           <div class="">
-            <div
-              class="duration-300 ease-linear"
-              id="accordion-collapse"
-              data-accordion="collapse">
-              <!-- colaps- -->
+            <div class="" id="accordion-collapse" data-accordion="collapse">
+              <!-- -------------------1------------------- -->
               <h2 id="accordion-collapse-heading-1">
                 <button
                   type="button"
-                  class="flex items-center justify-between w-full p-4 mb-2 font-medium text-left border border-[#FDF7FB33] duration-300 ease-linear"
+                  class="flex items-center justify-between w-full p-4 mb-2 font-medium text-left border border-[#FDF7FB33]"
                   data-accordion-target="#accordion-collapse-body-1"
+                  aria-expanded="false"
                   aria-controls="accordion-collapse-body-1">
-                  <span>What is Flowbite?</span>
+                  <span>Available payment methods?</span>
                   <svg
                     data-accordion-icon
-                    class="w-6 h-6 rotate-180 shrink-0"
+                    class="w-6 h-6 shrink-0"
                     fill="currentColor"
                     viewBox="0 0 20 20"
                     xmlns="http://www.w3.org/2000/svg">
@@ -685,24 +683,189 @@
               </h2>
               <div
                 id="accordion-collapse-body-1"
-                class="hidden duration-300 ease-linear"
+                class="hidden"
                 aria-labelledby="accordion-collapse-heading-1">
                 <div class="p-5 pt-2">
-                  <p class="mb-2 text-gray-500 dark:text-gray-400">
-                    Flowbite is an open-source library of interactive components
-                    built on top of Tailwind CSS including buttons, dropdowns,
-                    modals, navbars, and more.
+                  <ul class="mb-2 text-gray-500 list-disc list-inside">
+                    <li>Paypal</li>
+                    <li>Credit Card</li>
+                  </ul>
+                </div>
+              </div>
+              <!-- -------------------2------------------- -->
+              <h2 id="accordion-collapse-heading-2">
+                <button
+                  type="button"
+                  class="flex items-center justify-between w-full p-4 mb-2 font-medium text-left border border-[#FDF7FB33]"
+                  data-accordion-target="#accordion-collapse-body-2"
+                  aria-expanded="false"
+                  aria-controls="accordion-collapse-body-2">
+                  <span>Which devices can be used for IPTV?</span>
+                  <svg
+                    data-accordion-icon
+                    class="w-6 h-6 shrink-0"
+                    fill="currentColor"
+                    viewBox="0 0 20 20"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path
+                      fill-rule="evenodd"
+                      d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
+                      clip-rule="evenodd"></path>
+                  </svg>
+                </button>
+              </h2>
+              <div
+                id="accordion-collapse-body-2"
+                class="hidden"
+                aria-labelledby="accordion-collapse-heading-2">
+                <div class="p-5 pt-2">
+                  <p class="mb-2 text-gray-500">
+                    Our IPTV services are accessible via all smart TV devices (Samsung, Sony, LG...), FireStick all Android devices (phones, Box Tv), Apple TV, iPhone, Google Chromecast, MAG box in the STB emulator app.
                   </p>
                 </div>
               </div>
 
+              <!-- -------------------3------------------- -->
+              <h2 id="accordion-collapse-heading-3">
+                <button
+                  type="button"
+                  class="flex items-center justify-between w-full p-4 mb-2 font-medium text-left border border-[#FDF7FB33]"
+                  data-accordion-target="#accordion-collapse-body-3"
+                  aria-expanded="false"
+                  aria-controls="accordion-collapse-body-3">
+                  <span>Recommended internet speed?</span>
+                  <svg
+                    data-accordion-icon
+                    class="w-6 h-6 shrink-0"
+                    fill="currentColor"
+                    viewBox="0 0 20 20"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path
+                      fill-rule="evenodd"
+                      d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
+                      clip-rule="evenodd"></path>
+                  </svg>
+                </button>
+              </h2>
+              <div
+                id="accordion-collapse-body-3"
+                class="hidden"
+                aria-labelledby="accordion-collapse-heading-3">
+                <div class="p-5 pt-2">
+                  <p class="mb-2 text-gray-500">
+                    If your download speed is not less than 20 mbps, then everything will work smoothly in the highest quality. If you are not sure, ask for 24H trial to test the quality first.
+                  </p>
+                </div>
+              </div>
+              <!-- -------- -->
 
-            
+              <!-- -------------------4------------------- -->
+              <h2 id="accordion-collapse-heading-4">
+                <button
+                  type="button"
+                  class="flex items-center justify-between w-full p-4 mb-2 font-medium text-left border border-[#FDF7FB33]"
+                  data-accordion-target="#accordion-collapse-body-4"
+                  aria-expanded="false"
+                  aria-controls="accordion-collapse-body-4">
+                  <span>Which countries are present?</span>
+                  <svg
+                    data-accordion-icon
+                    class="w-6 h-6 shrink-0"
+                    fill="currentColor"
+                    viewBox="0 0 20 20"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path
+                      fill-rule="evenodd"
+                      d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
+                      clip-rule="evenodd"></path>
+                  </svg>
+                </button>
+              </h2>
+              <div
+                id="accordion-collapse-body-4"
+                class="hidden"
+                aria-labelledby="accordion-collapse-heading-4">
+                <div class="p-5 pt-2">
+                  <p class="mb-2 text-gray-500">
+                    USA Canada Maxico UK Netherlands Belgium France Germany Switzerland Austria Poland Spain Malta Portugal Italy USA Canada Australia New Zealand Arabic India Pakistan Iran Turkey Azerbaycan Kurdistan Africa Afghanistan Armenia Exyu Slovenia Albania Greece Latino Brazil Caribbean Suriname Sweden Denmark Norway Finland Czech Bulgaria Romania Hungary Russia Georgia/Kazakh Ukraine Lithuania Latvia Estonia China/HK Malaysia Philippines Indonesia Korea Thailand Taiwan Vietnam
+                  </p>
+                </div>
+              </div>
+              <!-- -------- -->
+
+              <!-- -------------------5------------------- -->
+              <h2 id="accordion-collapse-heading-5">
+                <button
+                  type="button"
+                  class="flex items-center justify-between w-full p-4 mb-2 font-medium text-left border border-[#FDF7FB33]"
+                  data-accordion-target="#accordion-collapse-body-5"
+                  aria-expanded="false"
+                  aria-controls="accordion-collapse-body-5">
+                  <span>How many connections at once?</span>
+                  <svg
+                    data-accordion-icon
+                    class="w-6 h-6 shrink-0"
+                    fill="currentColor"
+                    viewBox="0 0 20 20"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path
+                      fill-rule="evenodd"
+                      d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
+                      clip-rule="evenodd"></path>
+                  </svg>
+                </button>
+              </h2>
+              <div
+                id="accordion-collapse-body-5"
+                class="hidden"
+                aria-labelledby="accordion-collapse-heading-5">
+                <div class="p-5 pt-2">
+                  <p class="mb-2 text-gray-500">
+                    You may install your account on multiple devices, but keep in mind that it works on 1 at a time.
+                  </p>
+                </div>
+              </div>
+              <!-- -------- -->
+
+              <!-- -------------------6------------------- -->
+              <h2 id="accordion-collapse-heading-6">
+                <button
+                  type="button"
+                  class="flex items-center justify-between w-full p-4 mb-2 font-medium text-left border border-[#FDF7FB33]"
+                  data-accordion-target="#accordion-collapse-body-6"
+                  aria-expanded="false"
+                  aria-controls="accordion-collapse-body-6">
+                  <span>How can I test the IPTV service?</span>
+                  <svg
+                    data-accordion-icon
+                    class="w-6 h-6 shrink-0"
+                    fill="currentColor"
+                    viewBox="0 0 20 20"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path
+                      fill-rule="evenodd"
+                      d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
+                      clip-rule="evenodd"></path>
+                  </svg>
+                </button>
+              </h2>
+              <div
+                id="accordion-collapse-body-6"
+                class="hidden"
+                aria-labelledby="accordion-collapse-heading-6">
+                <div class="p-5 pt-2">
+                  <p class="mb-2 text-gray-500">
+                    We offers you a 24H trial. With this you can watch all the channels available on our IPTV packages, channels movies and series.
+                  </p>
+                </div>
+              </div>
+              <!-- -------- -->
             </div>
           </div>
 
           <!-- contact section -->
-          <div class="border border-[#FDF7FB33] p-[10px]">
+          <div
+            class="border border-[#FDF7FB33] p-[10px] flex justify-center items-center">
             <div class="text-center">
               <i class="fa-brands fa-whatsapp text-7xl my-5"></i>
               <h5 class="font-bold text-4xl mb-5">Online Support</h5>
