add title on hero section

--- a/src/index.html
+++ b/src/index.html
@@ -104,7 +104,7 @@
     <!-- Main section start -->
     <main>
       <!-- Hero section start -->
-      <section class="">
+      <section class="relative">
         <div style="padding: 56.25% 0 0 0; position: relative">
           <iframe
             src="https://player.vimeo.com/video/826734993?h=3eae2eb06f&controls=0&loop=1&title=0&byline=0&portrait=0&autoplay=1"
@@ -118,10 +118,27 @@
             frameborder="0"
             allow="autoplay; fullscreen; picture-in-picture"
             allowfullscreen></iframe>
-        </div>
-      </section>
 
+           
+        </div>
+       <div class="absolute top-0 left-0 max-h-screen h-full flex justify-center items-center w-full">
+        <div class="max-w-2xl">
+          <h1 class="text-4xl font-bold bayonF tracking-widest mb-5">THE BEST IPTV PROVIDER IN USA</h1>
+          <p class="text-2xl tracking-widest helveticaFM">Enjoy your time with excellent image quality up to 4K, on any device, anytime and anywhere, with over +15.000 channels, +100.000 VOD and uptime 100%​ with no Buffering .</p>
+          <div class="flex justify-center mt-7">
+            <button
+            type="button"
+            class="py-3 px-5 rounded bg-pC text-black hover:bg-white hover:scale-105 duration-300 lg:font-bold font-semibold lg:text-xl text-xs ease-in-out">
+            GET 24H TRIAL
+            <i class="fa-solid fa-cart-plus text-black bg-transparent"></i>
+          </button>
+          </div>
+        </div>
+       </div>
+      </section>
       <!-- Hero section end -->
+
+
 
       <!-- Movies card slider section start -->
       <section class="">
@@ -367,6 +384,8 @@
         </div>
       </section>
       <!-- Movies card slider section end -->
+
+
 
       <!-- Start Popular -->
       <div>
@@ -884,6 +903,7 @@
           </div>
         </div>
       </section>
+      <!-- FAQ section end -->
 
       <!-- Review Start -->
       <div>
@@ -963,6 +983,7 @@
         </div>
       </div>
       <!-- Review End -->
+
     </main>
     <!-- Main section End -->
 
