--- a/src/index.html
+++ b/src/index.html
@@ -385,13 +385,13 @@
     <!-- Main section End -->
 
     <!-- Footer start -->
-    <!-- <footer
-      class="footerGradient flex justify-around items-center text-white py-5">
+    <footer
+      class="footerGradient flex justify-around items-center sm:flex-row flex-col gap-3 flex-wrap text-white py-5">
       <p>Refund and Returns Policy</p>
       <p>Privacy Policy</p>
       <p>Terms Of Service</p>
       <p>serviceIPTV©2023​</p>
-    </footer> -->
+    </footer>
     <!-- Footer End -->
 
     <!-- script link -->
