--- a/src/index.html
+++ b/src/index.html
@@ -664,6 +664,247 @@
         </div>
       </div>
       <!-- End How does it works -->
+
+
+      <!-- FAQ section -->
+      <section class="mb-32">
+        <div class="p-3 bgGradient">
+          <h5
+            class="text-white md:text-[42px] text-2xl font-bold text-center mb-2 afterBefore relative">
+            Frequently Asked Questions (FAQ)
+          </h5>
+        </div>
+
+        <div class="grid md:grid-cols-2 grid-cols-1 gap-5 md:max-w-5xl max-w-md mx-auto">
+          <!-- faq -->
+          <div class="">
+            <div class="" id="accordion-collapse" data-accordion="collapse">
+              <!-- -------------------1------------------- -->
+              <h2 id="accordion-collapse-heading-1">
+                <button
+                  type="button"
+                  class="flex items-center justify-between w-full p-4 mb-2 font-medium text-left border border-[#FDF7FB33]"
+                  data-accordion-target="#accordion-collapse-body-1"
+                  aria-expanded="false"
+                  aria-controls="accordion-collapse-body-1">
+                  <span>Available payment methods?</span>
+                  <svg
+                    data-accordion-icon
+                    class="w-6 h-6 shrink-0"
+                    fill="currentColor"
+                    viewBox="0 0 20 20"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path
+                      fill-rule="evenodd"
+                      d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
+                      clip-rule="evenodd"></path>
+                  </svg>
+                </button>
+              </h2>
+              <div
+                id="accordion-collapse-body-1"
+                class="hidden"
+                aria-labelledby="accordion-collapse-heading-1">
+                <div class="p-5 pt-2">
+                  <ul class="mb-2 text-gray-500 list-disc list-inside">
+                    <li>Paypal</li>
+                    <li>Credit Card</li>
+                  </ul>
+                </div>
+              </div>
+              <!-- -------------------2------------------- -->
+              <h2 id="accordion-collapse-heading-2">
+                <button
+                  type="button"
+                  class="flex items-center justify-between w-full p-4 mb-2 font-medium text-left border border-[#FDF7FB33]"
+                  data-accordion-target="#accordion-collapse-body-2"
+                  aria-expanded="false"
+                  aria-controls="accordion-collapse-body-2">
+                  <span>Which devices can be used for IPTV?</span>
+                  <svg
+                    data-accordion-icon
+                    class="w-6 h-6 shrink-0"
+                    fill="currentColor"
+                    viewBox="0 0 20 20"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path
+                      fill-rule="evenodd"
+                      d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
+                      clip-rule="evenodd"></path>
+                  </svg>
+                </button>
+              </h2>
+              <div
+                id="accordion-collapse-body-2"
+                class="hidden"
+                aria-labelledby="accordion-collapse-heading-2">
+                <div class="p-5 pt-2">
+                  <p class="mb-2 text-gray-500">
+                    Our IPTV services are accessible via all smart TV devices (Samsung, Sony, LG...), FireStick all Android devices (phones, Box Tv), Apple TV, iPhone, Google Chromecast, MAG box in the STB emulator app.
+                  </p>
+                </div>
+              </div>
+
+              <!-- -------------------3------------------- -->
+              <h2 id="accordion-collapse-heading-3">
+                <button
+                  type="button"
+                  class="flex items-center justify-between w-full p-4 mb-2 font-medium text-left border border-[#FDF7FB33]"
+                  data-accordion-target="#accordion-collapse-body-3"
+                  aria-expanded="false"
+                  aria-controls="accordion-collapse-body-3">
+                  <span>Recommended internet speed?</span>
+                  <svg
+                    data-accordion-icon
+                    class="w-6 h-6 shrink-0"
+                    fill="currentColor"
+                    viewBox="0 0 20 20"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path
+                      fill-rule="evenodd"
+                      d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
+                      clip-rule="evenodd"></path>
+                  </svg>
+                </button>
+              </h2>
+              <div
+                id="accordion-collapse-body-3"
+                class="hidden"
+                aria-labelledby="accordion-collapse-heading-3">
+                <div class="p-5 pt-2">
+                  <p class="mb-2 text-gray-500">
+                    If your download speed is not less than 20 mbps, then everything will work smoothly in the highest quality. If you are not sure, ask for 24H trial to test the quality first.
+                  </p>
+                </div>
+              </div>
+              <!-- -------- -->
+
+              <!-- -------------------4------------------- -->
+              <h2 id="accordion-collapse-heading-4">
+                <button
+                  type="button"
+                  class="flex items-center justify-between w-full p-4 mb-2 font-medium text-left border border-[#FDF7FB33]"
+                  data-accordion-target="#accordion-collapse-body-4"
+                  aria-expanded="false"
+                  aria-controls="accordion-collapse-body-4">
+                  <span>Which countries are present?</span>
+                  <svg
+                    data-accordion-icon
+                    class="w-6 h-6 shrink-0"
+                    fill="currentColor"
+                    viewBox="0 0 20 20"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path
+                      fill-rule="evenodd"
+                      d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
+                      clip-rule="evenodd"></path>
+                  </svg>
+                </button>
+              </h2>
+              <div
+                id="accordion-collapse-body-4"
+                class="hidden"
+                aria-labelledby="accordion-collapse-heading-4">
+                <div class="p-5 pt-2">
+                  <p class="mb-2 text-gray-500">
+                    USA Canada Maxico UK Netherlands Belgium France Germany Switzerland Austria Poland Spain Malta Portugal Italy USA Canada Australia New Zealand Arabic India Pakistan Iran Turkey Azerbaycan Kurdistan Africa Afghanistan Armenia Exyu Slovenia Albania Greece Latino Brazil Caribbean Suriname Sweden Denmark Norway Finland Czech Bulgaria Romania Hungary Russia Georgia/Kazakh Ukraine Lithuania Latvia Estonia China/HK Malaysia Philippines Indonesia Korea Thailand Taiwan Vietnam
+                  </p>
+                </div>
+              </div>
+              <!-- -------- -->
+
+              <!-- -------------------5------------------- -->
+              <h2 id="accordion-collapse-heading-5">
+                <button
+                  type="button"
+                  class="flex items-center justify-between w-full p-4 mb-2 font-medium text-left border border-[#FDF7FB33]"
+                  data-accordion-target="#accordion-collapse-body-5"
+                  aria-expanded="false"
+                  aria-controls="accordion-collapse-body-5">
+                  <span>How many connections at once?</span>
+                  <svg
+                    data-accordion-icon
+                    class="w-6 h-6 shrink-0"
+                    fill="currentColor"
+                    viewBox="0 0 20 20"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path
+                      fill-rule="evenodd"
+                      d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
+                      clip-rule="evenodd"></path>
+                  </svg>
+                </button>
+              </h2>
+              <div
+                id="accordion-collapse-body-5"
+                class="hidden"
+                aria-labelledby="accordion-collapse-heading-5">
+                <div class="p-5 pt-2">
+                  <p class="mb-2 text-gray-500">
+                    You may install your account on multiple devices, but keep in mind that it works on 1 at a time.
+                  </p>
+                </div>
+              </div>
+              <!-- -------- -->
+
+              <!-- -------------------6------------------- -->
+              <h2 id="accordion-collapse-heading-6">
+                <button
+                  type="button"
+                  class="flex items-center justify-between w-full p-4 mb-2 font-medium text-left border border-[#FDF7FB33]"
+                  data-accordion-target="#accordion-collapse-body-6"
+                  aria-expanded="false"
+                  aria-controls="accordion-collapse-body-6">
+                  <span>How can I test the IPTV service?</span>
+                  <svg
+                    data-accordion-icon
+                    class="w-6 h-6 shrink-0"
+                    fill="currentColor"
+                    viewBox="0 0 20 20"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path
+                      fill-rule="evenodd"
+                      d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
+                      clip-rule="evenodd"></path>
+                  </svg>
+                </button>
+              </h2>
+              <div
+                id="accordion-collapse-body-6"
+                class="hidden"
+                aria-labelledby="accordion-collapse-heading-6">
+                <div class="p-5 pt-2">
+                  <p class="mb-2 text-gray-500">
+                    We offers you a 24H trial. With this you can watch all the channels available on our IPTV packages, channels movies and series.
+                  </p>
+                </div>
+              </div>
+              <!-- -------- -->
+            </div>
+          </div>
+
+          <!-- contact section -->
+          <div
+            class="border border-[#FDF7FB33] p-[10px] flex justify-center items-center">
+            <div class="text-center">
+              <i class="fa-brands fa-whatsapp text-7xl my-5"></i>
+              <h5 class="font-bold text-4xl mb-5">Online Support</h5>
+              <button
+                class="text-xl px-3 py-2 text-black font-semibold hover:bg-white zoom-in-zoom-out bg-sC rounded-full border duration-300 mb-5">
+                <i class="fa-solid fa-comment-dots mr-1 text-black"></i>
+                WhatsApp us
+              </button>
+              <p class="text-xl tracking-widest mb-5">
+                You still have a question?
+              </p>
+              <p class="text-xl tracking-widest mb-5">
+                Email us : contact@serviceiptv.com
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- FAQ section end -->
     </main>
     <!-- Main section End -->
 
