--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,12 @@
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
+
+      <!-- animate css -->
+      <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
   </head>
   <body class="">
     <!-- Header section start -->
@@ -117,11 +123,11 @@
           class="absolute top-0 left-0 max-h-screen h-full flex justify-center items-center w-full">
           <div class="max-w-2xl px-5">
             <div class="mb-10">
-              <h1 class="text-4xl text-center font-bold bayonF tracking-widest">
+              <h1 class="text-4xl text-center font-bold bayonF tracking-widest ">
                 THE BEST IPTV PROVIDER IN USA
               </h1>
-              <div class="h-1 bg-pC max-w-sm mx-auto mb-1"></div>
-              <div class="h-1 bg-pC max-w-xs mx-auto"></div>
+              <div class="h-1 bg-pC max-w-sm mx-auto mb-1 animate__animated animate__slideInLeft"></div>
+              <div class="h-1 bg-pC max-w-xs mx-auto animate__animated animate__slideInRight"></div>
             </div>
             <p class="sm:text-2xl text-xl tracking-widest helveticaFM">
               Enjoy your time with excellent image quality up to 4K, on any
@@ -147,8 +153,8 @@
           <h3 class="sm:text-4xl text-xl font-bold text-center">
             Thousands of Live Channels, Movies, Series, TV Shows & Sports
           </h3>
-          <div class="h-1 bg-pC max-w-3xl mx-auto mb-1"></div>
-          <div class="h-1 bg-pC max-w-2xl mx-auto"></div>
+          <div class="h-1 bg-pC max-w-3xl mx-auto mb-1 animate__animated animate__slideInLeft"></div>
+          <div class="h-1 bg-pC max-w-2xl mx-auto animate__animated animate__slideInRight"></div>
         </div>
 
         <!-- animation card -->
@@ -395,8 +401,8 @@
             class="text-white md:text-[42px] text-xl font-bold text-center mb-2 afterBefore relative">
             Flexible Pricing Plans
           </h5>
-          <div class="h-1 bg-pC max-w-3xl mx-auto mb-1"></div>
-          <div class="h-1 bg-pC max-w-2xl mx-auto"></div>
+          <div class="h-1 bg-pC max-w-md mx-auto mb-1 animate__animated animate__slideInLeft"></div>
+          <div class="h-1 bg-pC max-w-sm mx-auto animate__animated animate__slideInRight"></div>
         </div>
         <div
           class="grid lg:grid-cols-4 md:grid-cols-3 sm:grid-cols-2 grid-cols-1 pt-5 gap-1">
@@ -603,8 +609,8 @@
             class="text-white md:text-[42px] text-2xl font-bold text-center mb-2 afterBefore relative">
             How does it work?​
           </h5>
-          <div class="h-1 bg-pC max-w-3xl mx-auto mb-1"></div>
-          <div class="h-1 bg-pC max-w-2xl mx-auto"></div>
+          <div class="h-1 bg-pC max-w-sm mx-auto mb-1 animate__animated animate__slideInLeft"></div>
+          <div class="h-1 bg-pC max-w-xs mx-auto animate__animated animate__slideInRight"></div>
         </div>
         <div
           class="md:py-[50px] py-7 max-w-[1450px] mx-auto text-white grid sm:grid-cols-3 grid-cols-1">
@@ -684,8 +690,8 @@
             class="text-white md:text-[42px] text-2xl font-bold text-center mb-2 afterBefore relative">
             Frequently Asked Questions (FAQ)
           </h5>
-          <div class="h-1 bg-pC max-w-3xl mx-auto mb-1"></div>
-          <div class="h-1 bg-pC max-w-2xl mx-auto"></div>
+          <div class="h-1 bg-pC max-w-xl mx-auto mb-1 animate__animated animate__slideInLeft"></div>
+          <div class="h-1 bg-pC max-w-lg mx-auto animate__animated animate__slideInRight"></div>
         </div>
 
         <div
@@ -943,8 +949,8 @@
             class="text-white md:text-[42px] text-2xl font-bold text-center mb-2 afterBefore relative">
             Reviews About Our IPTV Service
           </h5>
-          <div class="h-1 bg-pC max-w-3xl mx-auto mb-1"></div>
-          <div class="h-1 bg-pC max-w-2xl mx-auto"></div>
+          <div class="h-1 bg-pC max-w-xl mx-auto mb-1 animate__animated animate__slideInLeft"></div>
+          <div class="h-1 bg-pC max-w-lg mx-auto animate__animated animate__slideInRight"></div>
         </div>
         <div>
           <div class="max-w-[960px] mx-auto">
