--- a/src/index.html
+++ b/src/index.html
@@ -122,13 +122,13 @@
           class="absolute top-0 left-0 max-h-screen h-full flex justify-center items-center w-full">
           <div class="max-w-2xl px-5">
             <div class="mb-10">
-              <h1 class="text-4xl text-center font-bold bayonF tracking-widest">
+              <h1 class="text-4xl font-bold bayonF tracking-widest">
                 THE BEST IPTV PROVIDER IN USA
               </h1>
               <div
-                class="h-1 bg-pC max-w-sm mx-auto mb-1 animate__animated animate__slideInLeft"></div>
+                class="h-1 bg-pC max-w-sm sm:mx-0 sm:ml-14 mx-auto mb-1 animate__animated animate__slideInLeft"></div>
               <div
-                class="h-1 bg-pC max-w-xs mx-auto animate__animated animate__slideInRight"></div>
+                class="h-1 bg-pC max-w-xs sm:mx-0 sm:ml-24 mx-auto animate__animated animate__slideInRight"></div>
             </div>
             <p class="sm:text-2xl text-xl tracking-widest helveticaFM">
               Enjoy your time with excellent image quality up to 4K, on any
@@ -572,8 +572,10 @@
             </ul>
             <div class="flex justify-center items-center mb-[19px] mt-[15px]">
               <button
-                class="bg-[#DBFF00] text-xl font-bold rounded-md shadow py-3 px-6 text-black hover:bg-[#ffffff] fill-black transition duration-[0.3s] hover:scale-[1.1]">
-                SUBSCRIBE <i class="fa-solid fa-cart-plus"></i>
+                type="button"
+                class="py-2 px-4 rounded bg-pC text-black hover:bg-white hover:scale-105 duration-300 lg:font-bold font-semibold lg:text-xl text-xs ease-in-out">
+                SUBSCRIBE
+                <i class="fa-solid fa-cart-plus text-black bg-transparent"></i>
               </button>
             </div>
             <p class="mb-[19px] transition text-sm leading-none text-center">
@@ -619,8 +621,10 @@
             </ul>
             <div class="flex justify-center items-center mb-[19px] mt-[15px]">
               <button
-                class="bg-[#DBFF00] text-xl font-bold rounded-md shadow py-3 px-6 text-black hover:bg-[#ffffff] fill-black transition duration-[0.3s] hover:scale-[1.1]">
-                SUBSCRIBE <i class="fa-solid fa-cart-plus"></i>
+                type="button"
+                class="py-2 px-4 rounded bg-pC text-black hover:bg-white hover:scale-105 duration-300 lg:font-bold font-semibold lg:text-xl text-xs ease-in-out">
+                SUBSCRIBE
+                <i class="fa-solid fa-cart-plus text-black bg-transparent"></i>
               </button>
             </div>
             <p class="mb-[19px] transition text-sm leading-none text-center">
@@ -666,8 +670,10 @@
             </ul>
             <div class="flex justify-center items-center mb-[19px] mt-[15px]">
               <button
-                class="bg-[#DBFF00] text-xl font-bold rounded-md shadow py-3 px-6 text-black hover:bg-[#ffffff] fill-black transition duration-[0.3s] hover:scale-[1.1]">
-                SUBSCRIBE <i class="fa-solid fa-cart-plus"></i>
+                type="button"
+                class="py-2 px-4 rounded bg-pC text-black hover:bg-white hover:scale-105 duration-300 lg:font-bold font-semibold lg:text-xl text-xs ease-in-out">
+                SUBSCRIBE
+                <i class="fa-solid fa-cart-plus text-black bg-transparent"></i>
               </button>
             </div>
             <p class="mb-[19px] transition text-sm leading-none text-center">
@@ -717,8 +723,10 @@
             </ul>
             <div class="flex justify-center items-center mb-[19px] mt-[15px]">
               <button
-                class="bg-[#DBFF00] text-xl font-bold rounded-md shadow py-3 px-6 text-black hover:bg-[#ffffff] fill-black anim transition duration-[0.3s] hover:scale-[1.1]">
-                SUBSCRIBE <i class="fa-solid fa-cart-plus"></i>
+                type="button"
+                class="py-2 px-4 rounded bg-pC text-black hover:bg-white hover:scale-105 duration-300 lg:font-bold font-semibold lg:text-xl text-xs ease-in-out">
+                SUBSCRIBE
+                <i class="fa-solid fa-cart-plus text-black bg-transparent"></i>
               </button>
             </div>
             <p class="mb-[19px] transition text-sm leading-none text-center">
@@ -809,8 +817,10 @@
             </p>
             <div class="flex justify-center items-center mb-[19px] mt-[15px]">
               <button
-                class="bg-[#DBFF00] text-xl font-bold rounded-md shadow py-3 px-6 text-black hover:bg-[#ffffff] fill-black transition duration-[0.3s] hover:scale-[1.1]">
-                GET 24H TRIAL <i class="fa-solid fa-cart-plus"></i>
+                type="button"
+                class="py-3 px-5 rounded bg-pC text-black hover:bg-white hover:scale-105 duration-300 lg:font-bold font-semibold lg:text-xl text-xs ease-in-out">
+                GET 24H TRIAL
+                <i class="fa-solid fa-cart-plus text-black bg-transparent"></i>
               </button>
             </div>
           </div>
