hero section customizetion

--- a/src/index.html
+++ b/src/index.html
@@ -109,7 +109,7 @@
     <!-- Main section start -->
     <main>
       <!-- Hero section start -->
-      <section id="home" class="relative md:h-auto h-screen">
+      <section id="home" class="relative md:h-auto min-h-[550px]">
         <div style="padding: 56.25% 0 0 0; position: relative">
           <iframe
             src="https://player.vimeo.com/video/826734993?h=3eae2eb06f&controls=0&loop=1&title=0&byline=0&portrait=0&autoplay=1"
@@ -119,10 +119,10 @@
             allowfullscreen></iframe>
         </div>
         <div
-          class="absolute top-0 left-0 max-h-screen h-full flex justify-center items-center w-full">
+          class="absolute top-0 left-0 h-full flex justify-center items-center w-full">
           <div class="max-w-2xl px-5">
             <div class="mb-10">
-              <h1 class="text-4xl font-bold bayonF tracking-widest">
+              <h1 class="text-[40px] sm:text-left text-center  font-bold bayonF tracking-widest">
                 THE BEST IPTV PROVIDER IN USA
               </h1>
               <div
